обновлены контроллеры, сервисы, модели и шаблоны